add android shell test, now load web page is ok

--- a/res/raw/blank_html.html
+++ b/res/raw/blank_html.html
@@ -2,4 +2,7 @@
     <head>
         <title>This page intentionally left blank.</title>
     </head>
+    <body>
+    <h1>Hello World!</h1>
+    </body>
 </html>
